--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,116 @@
 @use 'font';
 @use 'var';
 
+$gray: #F3F2F0;
+$dark: #232326;
+$red: #D40000;
+$light: #FFFFFF;
+
+$tr: 0.3s;
+
+$font: "Inter", serif;
+
 body {
-    font-family: $font;
+    max-width: 1920px;
+    background-color: $dark;
+}
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    width: 100%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.header {
+    padding-top: 41px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &__link {
+        display: flex;
+        gap: 27px;
+    }
+    &__nav-link{
+        font-family: $font;
+        color: $gray;
+        transition: $tr;
+    }
+    &__nav-link:hover {
+        color: $red;
+    }
+    &__contact-link {
+        display: flex;
+        align-items: center;
+        font-family: $font;
+        gap: 25px;
+        color: $gray;
+    }
+    &__phone {
+        font-family: $font;
+        color: $gray;
+        transition: $tr;
+    }
+    &__phone:hover {
+        color: $red;
+    }
+    &__separator {
+        width: 1px;
+        height: 20px;
+        background-color: $gray;
+        margin: 0 10px;
+    }
+    &__amail {
+        font-family: $font;
+        color: $gray;
+        transition: $tr;
+    }
+    &__amail:hover {
+        color: $red;
+    }
+}
+
+.hero {
+    max-width: 100%;
+    &__banner {
+        max-width: 100%;
+        display: block;
+        padding-top: 62px;
+    }
+    &__name {
+        color: $gray;
+        font-family: $font;
+        font-size: 28px;
+        font-weight: 400;
+        padding-top: 150px;
+        line-height: 150%;
+        margin: 0;
+        z-index: 9999;
+        position: relative;
+    }
+    &__name::before {
+        content: "";
+        max-width: 100%;
+        height: 253px;
+        width: 281px;
+        display: block;
+        position: absolute;
+        z-index: -1;
+        left: -152px;
+        top: 105px;
+        background-image: url(../images/objects/triangle.png);
+    }
+    &__info {
+        color: $gray;
+        font-family: $font;
+        font-size: 74px;
+        font-weight: 700;
+        line-height: 90px;
+        text-transform: uppercase;
+        z-index: 9999;
+        position: relative;
+    }
 }
