--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -113,4 +113,32 @@ a {
         z-index: 9999;
         position: relative;
     }
+    &__social-info {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__additionall {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+    }
+    &__discussion {
+        color: $gray;
+        font-family: $font;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 150%;
+    }
+    &__discussion::after {
+        content:"";
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: $gray;
+        background-color: transparent;
+        transition: $tr;
+    }
+    &__discussion:hover::after {
+        background-color: $gray;
+    }
 }
