--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -117,7 +117,7 @@ a {
     &__social-info {
         display: flex;
         justify-content: space-between;
-        border-bottom: 1px solid;
+        border-bottom: 1px $gray solid;
         padding-bottom: 60px;
     }
     &__additionall {
@@ -170,12 +170,47 @@ a {
         transition: $tr;
     }
     &__ellipse {
-        left: 98px;
+        left: 30px;
         top: -40px;
         position: absolute;
         height: 106px;
         width: 106px;
-        background-image: url(../images/objects/ellipse.png);
         z-index: -1;
+    }
+    &__web {
+        margin-top: 45px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    &__description {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    &__text 
+    &__web-info:nth-child(1) {
+        margin-right: 91px;
+    }
+    &__web-info:nth-child(2) {
+        margin-right: 77px;
+    }
+    &__web-info:nth-child(3) {
+        margin-right: 57px;
+    }
+    &__web-info:nth-child(4) {
+        margin-right: 14px;
+    }
+    &__description {
+        color: $light;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 150%;
+    }
+    &__text {
+        color: $gray;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 150%;
+        opacity: 0.9;
     }
 }
