--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -176,6 +176,7 @@ a {
         height: 106px;
         width: 106px;
         z-index: -1;
+        background-image: url(../images/objects/ellipse.png);
     }
     &__web {
         margin-top: 45px;
@@ -184,10 +185,20 @@ a {
         align-items: flex-start;
     }
     &__description {
+        color: $light;
         margin-top: 0;
         margin-bottom: 0;
     }
-    &__text 
+    &__text {
+        padding-top: 15px;
+        padding-bottom: 0;
+        margin: 0;
+        color: $gray;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 150%;
+        opacity: 0.8;
+    }
     &__web-info:nth-child(1) {
         margin-right: 91px;
     }
@@ -206,11 +217,89 @@ a {
         font-weight: 700;
         line-height: 150%;
     }
-    &__text {
+}
+.article {
+    &__about-info {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 180px;
+        border-bottom: 1px $gray solid;
+        padding-bottom: 60px;
+    }
+    &__about {
+        font-size: 28px;
+        color: $light;
+        font-weight: 700;
+        line-height: 150%;
+        text-transform: uppercase;
+        margin: 0;
+    }
+    &__about-text {
+        width: 560px;
+        height: 168px;
+        color: $gray;
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 150%;
+        margin: 0;
+        opacity: 0.8;
+    }
+    &__wrap {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row-reverse;
+        margin-top: 60px;
+    }
+    &__grid-info {
+        width: 560px;
+        height: 274px;
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+        gap: 42px;
+    }
+    &__skills {
+        color: $light;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 150%;
+        margin-top: 0;
+        margin-bottom: 20px;
+    }
+    &__skills-info {
         color: $gray;
         font-size: 14px;
         font-weight: 400;
         line-height: 150%;
-        opacity: 0.9;
+        margin: 0;
+        opacity: 0.8;
+    }
+    &__grid-details {
+        display: grid;
+        align-items: center;
+        grid-template-columns: repeat(1, 1fr);
+        margin-top: 180px;
+    }
+    &__grid-vertical {
+        border-top: 1px $light solid;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        }
+    &__stage {
+        color: $gray;
+        margin-top: 30px;
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 150%;
+    }
+    &__stage-text {
+        color: $gray;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 150%;
+        opacity: 0.8;
     }
 }
+
+
+
