--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,10 +14,24 @@ body {
     max-width: 1920px;
     background-color: $dark;
     font-family: "Inter", serif;
+    margin: 0 auto;
 }
 
 a {
     text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+li {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 10px;
+}
+ul li::before {
+    content: '- ';
 }
 
 .container {
@@ -323,7 +337,7 @@ a {
 
 .section {
     &__section-portfolio {
-
+        position: relative;
     }
     &__portfolio-txt {
         margin-top: 180px;
@@ -332,18 +346,57 @@ a {
         font-weight: 700;
         text-transform: uppercase;
     }
-    &__red-circle {
-        content: "";
+    &__red-circle::before {
+        content: '';
         width: 465px;
         height: 465px;
-        right: 623px;
+        margin-left: 332px;
         margin-top: -159px;
         border-radius: 100%;
         display: block;
         background-color: $red;
         z-index: -1;
+        position: absolute;
+    }
+    &__portfolio-link {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 244px;
+        padding-bottom: 58px;
+        border-bottom: 1px solid $gray ;
+    }
+    &__portfolio-link-txt {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+    &__name-project {
+        color: $light;
+        font-size: 28px;
+        font-weight: 700;
+        line-height: 150%;
+        margin-bottom: 0;
+    }
+    &__description-project {
+        padding: 0;
+        color: $gray;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 150%;
+        opacity: 0.8;
+    }
+    &__hours {
+        color: $gray;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 150%;
+        opacity: 0.8;
+        margin-top: -20px;
+        margin-bottom: 0;
+    }
+    &__bnr-img {
+        width: 560px;
+        height: 315px;
     }
 }
-
-
 
