--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -398,5 +398,27 @@ ul li::before {
         width: 560px;
         height: 315px;
     }
+    &__gradient {
+        left: 0;
+        margin-top: 103px;
+        position: absolute;
+        width: 100%;
+        height: 871px;
+        background: linear-gradient(180deg, rgb(20, 20, 22), rgba(20, 20, 22, 0) 100%);
+        z-index: -2;
+    }
+    &__portfolio-link:nth-last-child(2) {
+        margin-top: 60px;
+    }
+    &__myself-txt {
+        display: block;
+        color: $gray;
+        margin-top: 180px;
+        border-bottom: 1px solid #F3F2F0;
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 150%;
+        padding-bottom: 80px;
+        padding-right: 270px;
+    }
 }
-
