--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -687,13 +687,15 @@ ul li::before {
         margin-right: 77px;
     }
     &__form-container {
+        padding-bottom: 130px;
+        border-bottom: 1px solid $gray ;
         display: flex;
         justify-content: space-between;
     }
     &__social-section {
         display: flex;
         gap: 48px;
-        padding-top: 247px;
+        padding-top: 363px;
     }
     &__social-link {
         color: $gray;
@@ -768,6 +770,8 @@ ul li::before {
         label {
             position: relative;
             display: block;
+            padding-top: 6px;
+            height: 100%;
             width: 100%;
             line-height: 50px;
             cursor: pointer;
@@ -779,6 +783,7 @@ ul li::before {
             &:hover { background: #3d3d3d; }
             &:after {
                 content: " ";
+                padding-top: 6px;
                 background-repeat: no-repeat;
                 background-image: url(../images/objects/arrow-select.svg);
                 position: absolute;
@@ -786,7 +791,7 @@ ul li::before {
                 font-size: 32px;
                 right: 0;
                 padding-left: 0px;
-                top: 20px;
+                top: 28px;
                 bottom: 0;
               }    
         }
@@ -827,8 +832,77 @@ ul li::before {
                 width: 581px;
                 max-height: 900px;
                 transition: max-height 1s ease-in;
-                overflow: hidden;
+                overflow: hidden;}
+            }
+    
+        }
+        &__button {
+            color: $light;
+            margin-top: 40px;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 150%;
+            width: 100%;
+            height: 65px;
+            background-color: $red;
+            border: none;
+            transition: $tr;
+            &:hover {
+                background-color:  rgb(234, 14, 0);
+            }
+        }
+}
+.footer {
+    margin-top: 61px;
+    display: flex;
+    justify-content: space-between;
+    
+    &__footer-info {
+        display: flex;
+        gap: 30px;
+    }
+    &__footer-link {
+        color: $light;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 150%;
+        transition: $tr;
+        &:hover {
+            color: $red;
         }
     }
-}
+    &__footer-contact {
+        display: flex;
+        gap: 25px;
+    }
+    &__phone-link {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 150%;
+        color: $light;
+        &:hover {
+            color: $red;
+            }
+        transition: $tr;
+    }
+    &__footer-seporator {
+        width: 1px;
+        height: 24px;
+        background-color: $gray;
+        margin: 0 10px;
+        opacity: 0.3;
+    }
+    &__footer-mail {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 150%;
+        color: $light;
+        &:hover {
+            color: $red;
+            }
+        transition: $tr;
+    }
+    &__and-info {
+        margin-top: 38px;
+    }
 }
