--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,7 +48,13 @@ ul li::before {
     &__link {
         display: flex;
         gap: 27px;
-        @media (max-width: 360px) {
+        @media (max-width: 1150px) {
+            gap: clamp(0.133rem, 4vw - 1.25rem, 1.8rem);
+        }
+        @media (max-width: 860px) {
+            gap: clamp(0.133rem, 4vw - 1.25rem, 1.8rem);
+        }
+        @media (max-width: 795px) {
             margin-left: 10px;
             margin-right: 10px;
             display: none;
@@ -69,8 +75,11 @@ ul li::before {
         font-family: $font;
         gap: 25px;
         color: $gray;
-        @media (max-width: 360px) {
-           
+        @media (max-width: 900px) {
+           gap: clamp(0.333rem, 2vw - 2rem, 0.667rem);
+        }
+        @media (max-width: 860px) {
+            gap: clamp(0.133rem, 2vw - 1.25rem, 1.8rem);
         }
     }
     &__phone {
@@ -132,6 +141,9 @@ ul li::before {
         margin: 0;
         z-index: 9999;
         position: relative;
+        @media (max-width: 600px) {
+            font-size: clamp(1rem, 2vw + 0.5rem, 1.556rem);
+        }
         @media (max-width: 360px) {
             padding-top: 60px;
             font-size: 18px;
@@ -166,6 +178,12 @@ ul li::before {
         text-transform: uppercase;
         z-index: 9999;
         position: relative;
+        @media (max-width: 780px) {
+            font-size: clamp(3.5rem, 4vw + 3rem, 9.25rem);
+        }
+        @media (max-width: 540px) {
+            font-size: clamp(1.5rem, 1vw + 3rem, 4.625rem);
+        }
         @media (max-width: 360px) {
             font-size: 28px;
         }
@@ -190,6 +208,12 @@ ul li::before {
         font-size: 16px;
         font-weight: 700;
         line-height: 150%;
+        @media (max-width: 500px) {
+            font-size: clamp(0.923rem, 3vw, 1.231rem);
+        }
+        @media (max-width: 460px) {
+            font-size: clamp(0.923rem, 1vw, 1.231rem);
+        }
         @media (max-width: 360px) {
             font-size: 12px;
         }
@@ -211,6 +235,9 @@ ul li::before {
         gap: 48px;
         position: relative;
         z-index: 9999;
+        @media (max-width: 500px) {
+            gap: clamp(0.833rem, 3vw + 1.25rem, 2rem);
+        }
         @media (max-width: 360px) {
             padding-top: 70px;
             gap: 20px;
@@ -222,9 +249,11 @@ ul li::before {
         font-weight: 400;
         line-height: 150%;
         position: relative;
+        @media (max-width: 500px) {
+            font-size: clamp(1rem, 2vw + 0.5rem, 1rem);
+        }
         @media (max-width: 360px) {
             font-size: 12px;
-           
         }
     }
     &__social-link:not(:last-child)::after {
@@ -234,6 +263,9 @@ ul li::before {
         height: 24px;
         background-color: $gray;
         margin: 0 24px;
+        @media (max-width: 360px) {
+            margin: 0 18px;
+        }
         @media (max-width: 360px) {
             margin: 0 10px;
             height: 20px;
@@ -290,18 +322,36 @@ ul li::before {
     }
     &__web-info:nth-child(1) {
         margin-right: 91px;
+        @media (max-width: 650px) {
+            margin-right: 30px;
+        }
+        @media (max-width: 520px) {
+            margin-right: 10px;
+        }
         @media (max-width: 360px) {
             margin-right: 27px;
         }
     }
     &__web-info:nth-child(2) {
         margin-right: 77px;
+        @media (max-width: 650px) {
+            margin-right: 30px;
+        }
+        @media (max-width: 520px) {
+            margin-right: 10px;
+        }
         @media (max-width: 360px) {
             margin-right: 10px;
         }
     }
     &__web-info:nth-child(3) {
         margin-right: 57px;
+        @media (max-width: 650px) {
+            margin-right: 30px;
+        }
+        @media (max-width: 520px) {
+            margin-right: 10px;
+        }
         @media (max-width: 360px) {
             padding-top: 30px;
             margin-right: 10px;
@@ -309,6 +359,12 @@ ul li::before {
     }
     &__web-info:nth-child(4) {
         margin-right: 14px;
+        @media (max-width: 650px) {
+            margin-right: 30px;
+        }
+        @media (max-width: 520px) {
+            margin-right: 10px;
+        }
         @media (max-width: 360px) {
             padding-top: 30px;
             margin-right: -2px;
@@ -833,18 +889,6 @@ ul li::before {
             height: 96px;
          }
     }
-    &__development-arrow-txt-info {
-        @media (max-width: 360px) {
-            width: 166px;
-            height: 170px;
-         }
-    }
-    &__development-container:nth-child(3) p {
-        width: 120px;
-    }
-    &__development-container:nth-child(4) &__seven {
-        margin-top: 0;
-    }
     &__development-container {
         margin-top: 60px;
         display: flex;
@@ -911,6 +955,28 @@ ul li::before {
     }
     &__development-discussion:hover::after {
         background-color: $gray;
+    }
+    &__development-container:nth-child(4) {
+        @media (max-width: 360px) {
+            border-bottom: 1px solid $light;
+         }
+    }
+    &__development-container:nth-child(4) &__development-paragraph {
+        @media (max-width: 360px) {
+            width: 120px;
+            margin-bottom: 30px;
+         }
+    }
+    &__development-container:nth-child(4) &__seven {
+        @media (max-width: 360px) {
+            top: -5px;
+            margin: 0;
+         }
+    }
+    &__development-container:nth-child(4) li {
+        @media (max-width: 360px) {
+            margin: 0;
+         }
     }
     &__development-arrow {
         display: flex;
@@ -1002,6 +1068,12 @@ ul li::before {
         position: relative;
         border-bottom: 1px solid $gray;
         padding-bottom: 45px;
+        @media (max-width: 360px) {
+            flex-direction: column;
+            margin-top: 15px;
+            border-top: 1px solid $light;
+            padding-bottom: 30px;
+         }
     }
     &__my-project {
         width: 286px;
@@ -1011,15 +1083,31 @@ ul li::before {
         font-weight: 700;
         line-height: 150%;
         text-transform: uppercase;
+        @media (max-width: 360px) {
+            width: 163px;
+            height: 48px;
+            margin-top: 80px;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 150%;
+            margin-bottom: 0;
+         }
     }
     &__circle-tringle {
         left: -178px;
         top: 0;
-        width: 328px;
+        width: 300px;
         height: 300px;
         position: absolute;
-        background-image: url(../images/objects/elipse-tringle.png);
+       background-color: $red;
+       border-radius: 100%;
         z-index: -2;
+        @media (max-width: 360px) {
+            left: -60px;
+            top: 20px;
+            width: 190px;
+            height: 190px;
+         }
     }
     &__my-project-txt {
         width: 483px;
@@ -1030,17 +1118,36 @@ ul li::before {
         line-height: 150%;
         opacity: 0.8;
         margin-right: 77px;
+        @media (max-width: 360px) {
+            width: 276px;
+            height: 96px;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 150%;
+            margin-top: 20px;
+         }
     }
     &__form-container {
         padding-bottom: 130px;
         border-bottom: 1px solid $gray ;
         display: flex;
         justify-content: space-between;
+        @media (max-width: 360px) {
+            justify-content: space-between;
+            flex-direction: column-reverse;
+            flex-wrap: wrap;
+            padding-bottom: 60px;
+         }
     }
     &__social-section {
         display: flex;
         gap: 48px;
         padding-top: 363px;
+        @media (max-width: 360px) {
+            padding-top: 62px;
+            padding-left: 95px;
+            gap: 20px;
+         }
     }
     &__social-link {
         color: $gray;
@@ -1048,6 +1155,12 @@ ul li::before {
         font-weight: 400;
         line-height: 150%;
         position: relative;
+        @media (max-width: 360px) {
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 150%;
+            
+         }
     }
     &__social-link:not(:last-child)::after {
         content: "";
@@ -1056,6 +1169,9 @@ ul li::before {
         height: 24px;
         background-color: $gray;
         margin: 0 24px;
+        @media (max-width: 360px) {
+            margin: 0 10px;
+         }
     }
     &__social-link:hover {
         color: $red;
@@ -1081,6 +1197,11 @@ ul li::before {
         opacity: 0.8;
         margin-top: 60px;
         margin-bottom: 10px;
+        @media (max-width: 360px) {
+            font-size: 10px;
+            font-weight: 400;
+            line-height: 150%;
+         }
     }
     &__input-type {
         width: 560px;
@@ -1093,6 +1214,10 @@ ul li::before {
         &:focus {
             outline: none;
           }
+          @media (max-width: 360px) {
+            width: 320px;
+            height: 55px;
+         }
     }
     &__connection {
         color: $gray;
@@ -1138,7 +1263,11 @@ ul li::before {
                 padding-left: 0px;
                 top: 28px;
                 bottom: 0;
-              }    
+              }
+              @media (max-width: 360px) {
+                width: 320px;
+                height: 55px;
+             }  
         }
         .section__content {
             display: flex;
@@ -1195,6 +1324,13 @@ ul li::before {
             &:hover {
                 background-color:  rgb(234, 14, 0);
             }
+            @media (max-width: 360px) {
+                font-size: 12px;
+                font-weight: 700;
+                line-height: 150%;
+                width: 340px;
+                height: 55px;
+             }
         }
 }
 .footer {
@@ -1203,10 +1339,17 @@ ul li::before {
     &__footer-info-block {
         display: flex;
         justify-content: space-between;
+        @media (max-width: 360px) {
+            flex-direction: column-reverse;
+            align-items: center;
+         }
     }
     &__footer-info {
         display: flex;
         gap: 30px;
+        @media (max-width: 360px) {
+            gap: 18px;
+         }
     }
     &__footer-link {
         color: $light;
@@ -1217,10 +1360,19 @@ ul li::before {
         &:hover {
             color: $red;
         }
+        @media (max-width: 360px) {
+            font-size: 10px;
+            font-weight: 400;
+            line-height: 150%;
+         }
     }
     &__footer-contact {
         display: flex;
         gap: 25px;
+        @media (max-width: 360px) {
+            gap: 4px;
+            margin-bottom: 30px;
+         }
     }
     &__phone-link {
         font-size: 14px;
@@ -1253,6 +1405,11 @@ ul li::before {
         margin-top: 40px;
         display: flex;
         justify-content: space-between;
+        @media (max-width: 360px) {
+            margin-top: 30px;
+            flex-direction: column;
+            align-items: center;
+         }
         p {
             opacity: 0.3;
             color: rgb(243, 242, 240);
