--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,8 @@ body {
     background-color: $dark;
     font-family: "Inter", serif;
     margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 a {
@@ -54,7 +56,7 @@ ul li::before {
         @media (max-width: 860px) {
             gap: clamp(0.133rem, 4vw - 1.25rem, 1.8rem);
         }
-        @media (max-width: 795px) {
+        @media (max-width: 820px) {
             margin-left: 10px;
             margin-right: 10px;
             display: none;
@@ -105,6 +107,20 @@ ul li::before {
         transition: $tr;
         @media (max-width: 360px) {
             display: none;
+        }
+    }
+    &__burger-menu {
+        display: none;
+        @media (max-width: 820px) {
+            width: 20px;
+            height: 20px;
+            display: block;
+            background-image: url(../images/burger.svg);
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-color: transparent;
+            border: none;
+            align-items: end;
         }
     }
     &__amail:hover {
@@ -1148,24 +1164,28 @@ ul li::before {
     &__development-container:nth-child(4) {
         border-bottom: none;
     }
+    &__line {
+        @media (max-width: 850px) {
+            width: 100%;
+            border-bottom: 1px solid $light;
+         }
+    }
 }
 .section {
-    &__my-project-container {
-        margin-top: 115px;
-        display: flex;
-        justify-content: space-between;
+    &__grid-my-project {
         position: relative;
-        border-bottom: 1px solid $gray;
-        padding-bottom: 45px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         @media (max-width: 860px) {
-            margin-top: 60px;
-            gap: 20px;
-         }
-        @media (max-width: 360px) {
+            display: flex;
+            align-items: center;
             flex-direction: column;
-            margin-top: 15px;
-            border-top: 1px solid $light;
-            padding-bottom: 30px;
+            grid-template-columns: repeat(1, 1fr);
+         }
+    }
+    &__input-phone {
+        @media (max-width: 610px) {
+            width: 100%;
          }
     }
     &__my-project {
@@ -1177,6 +1197,7 @@ ul li::before {
         line-height: 150%;
         text-transform: uppercase;
         @media (max-width: 860px) {
+            align-self: baseline;
             font-size: clamp(16px, 1.5vw + 0.9rem, 28px);
          }
         @media (max-width: 360px) {
@@ -1214,8 +1235,10 @@ ul li::before {
         line-height: 150%;
         opacity: 0.8;
         margin-right: 77px;
-        @media (max-width: 700px) {
-            font-size: clamp(16px, 0.5vw + 0.5rem, 28px);
+        @media (max-width: 857px) {
+            width: 100%;
+            align-self: baseline;
+            font-size: clamp(22px, 0.5vw + 0.5rem, 28px);
          }
         @media (max-width: 360px) {
             width: 276px;
@@ -1224,6 +1247,13 @@ ul li::before {
             font-weight: 400;
             line-height: 150%;
             margin-top: 20px;
+         }
+    }
+    &__line-bottom {
+        @media (max-width: 360px) {
+            padding-top: 30px;
+            width: 100%;
+            border-bottom: 1px solid $light;
          }
     }
     &__form-container {
@@ -1241,7 +1271,12 @@ ul li::before {
     &__social-section {
         display: flex;
         gap: 48px;
-        padding-top: 363px;
+        align-self: end;
+        @media (max-width: 860px) {
+            margin-top: 62px;
+            align-self: center;
+            order: 4;
+         }
         @media (max-width: 360px) {
             padding-top: 62px;
             padding-left: 95px;
@@ -1287,6 +1322,12 @@ ul li::before {
         font-weight: 400;
         line-height: 150%;
     }
+    &__input-phone {
+        @media (max-width: 360px) {
+            margin-top: 30px;
+            border-top: 1px solid $light;
+         }
+    }
     &__phone-mail {
         color: white;
         padding-right: 448px;
@@ -1296,8 +1337,12 @@ ul li::before {
         opacity: 0.8;
         margin-top: 60px;
         margin-bottom: 10px;
+        @media (max-width: 610px) {
+            width: 100%;
+         }
         @media (max-width: 360px) {
             font-size: 10px;
+            margin-top: 50px;
             font-weight: 400;
             line-height: 150%;
          }
@@ -1313,18 +1358,8 @@ ul li::before {
         &:focus {
             outline: none;
           }
-          @media (max-width: 1000px) {
-            width: 500px
-         }
-         @media (max-width: 760px) {
-            width: 400px;
-         }
-         @media (max-width: 575px) {
-            width: 250px;
-         }
-          @media (max-width: 360px) {
-            width: 320px;
-            height: 55px;
+          @media (max-width: 610px) {
+            width: 100%;
          }
     }
     &__connection {
@@ -1344,6 +1379,12 @@ ul li::before {
         min-height: 50px;
         text-align: center;
         position: relative;
+        @media (max-width: 610px) {
+            width: 100%;
+         }
+          @media (max-width: 360px) {
+            width: 100%;
+         }
         ul { list-style-type: none; padding: 0; }
         label {
             position: relative;
@@ -1372,23 +1413,6 @@ ul li::before {
                 top: 28px;
                 bottom: 0;
               }
-              @media (max-width: 360px) {
-                width: 320px;
-                height: 55px;
-             }
-             @media (max-width: 1000px) {
-                width: 500px
-             }
-             @media (max-width: 760px) {
-                width: 400px;
-             }
-             @media (max-width: 575px) {
-                width: 250px;
-             }
-              @media (max-width: 360px) {
-                width: 320px;
-                height: 55px;
-             }  
         }
         .section__content {
             display: flex;
@@ -1449,27 +1473,13 @@ ul li::before {
                 font-size: 12px;
                 font-weight: 700;
                 line-height: 150%;
-                width: 340px;
-                height: 55px;
-             }
-             @media (max-width: 1000px) {
-                width: 522px
-             }
-             @media (max-width: 760px) {
-                width: 420px;
-             }
-             @media (max-width: 575px) {
-                width: 272px;
-             }
-              @media (max-width: 360px) {
-                width: 320px;
+                width: 100%;
                 height: 55px;
              }
         }
 }
 .footer {
     margin-top: 61px;
-   
     &__footer-info-block {
         display: flex;
         justify-content: space-between;
@@ -1510,12 +1520,13 @@ ul li::before {
     &__footer-contact {
         display: flex;
         gap: 25px;
-        @media (max-width: 360px) {
+        @media (max-width: 775px) {
             gap: 4px;
             margin-bottom: 30px;
          }
     }
     &__phone-link {
+        width: 100%;
         font-size: 14px;
         font-weight: 400;
         line-height: 150%;
@@ -1541,6 +1552,9 @@ ul li::before {
             color: $red;
             }
         transition: $tr;
+        @media (max-width: 610px) {
+            width: 100%;
+         }
     }
     &__info-and {
         margin-top: 40px;
@@ -1567,3 +1581,4 @@ ul li::before {
         }
     }
 }
+
