--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -62,6 +62,49 @@ ul li::before {
             display: none;
         }
     }
+    &__modal {
+        width: 100%;
+        max-width: 360px;
+        height: 618px;
+        background-color: #7d7d8a;
+        position: absolute;
+        top: -650px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        box-sizing: border-box;
+    }
+    &__link-modal {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+        padding-top: 100px;
+    }
+    &__nav-link-modal {
+        font-size: 26px;
+        font-weight: 400;
+        line-height: 150%;
+        color: $light;
+        border-top: 1px solid $light;
+        border-bottom: 1px solid $light;
+    }
+    &__modal-close {
+        display: block;
+        width: 25px;
+        height: 25px;
+        background-image: url(../images/close.svg);
+        background-color: transparent;
+        background-repeat: no-repeat;
+        background-size: contain;
+        border: none;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+
+
     &__nav-link{
         font-family: $font;
         color: $gray;
