--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -64,21 +64,23 @@ ul li::before {
     }
     &__modal {
         width: 100%;
-        max-width: 360px;
+        max-width: 815px;
         height: 618px;
-        background-color: #7d7d8a;
+        background-color: $dark;
         position: absolute;
         top: -650px;
         left: 0;
         right: 0;
         margin: 0 auto;
         box-sizing: border-box;
+        transition: 0.4s;
+        z-index: 9999;
     }
     &__link-modal {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 40px;
+        gap: 20px;
         padding-top: 100px;
     }
     &__nav-link-modal {
@@ -86,8 +88,25 @@ ul li::before {
         font-weight: 400;
         line-height: 150%;
         color: $light;
-        border-top: 1px solid $light;
-        border-bottom: 1px solid $light;
+        width: 95%;
+        text-align: center;
+        transition: $tr;
+        &:hover {
+            color: $red;
+        }
+        &:nth-child(5) {
+            content: '';
+            display: block;
+            padding-bottom: 20px;
+            border-bottom: 1px solid #5c5a5a;
+        }
+        &::before {
+            content: '';
+            display: block;
+            border-top: 1px solid $light;
+            padding-top: 20px;
+            opacity: 0.2;
+        }
     }
     &__modal-close {
         display: block;
@@ -155,7 +174,7 @@ ul li::before {
     &__burger-menu {
         display: none;
         @media (max-width: 820px) {
-            width: 20px;
+            width: 26px;
             height: 20px;
             display: block;
             background-image: url(../images/burger.svg);
