--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -68,7 +68,7 @@ ul li::before {
         height: 618px;
         background-color: $dark;
         position: absolute;
-        top: -650px;
+        top: -900px;
         left: 0;
         right: 0;
         margin: 0 auto;
@@ -81,7 +81,7 @@ ul li::before {
         flex-direction: column;
         align-items: center;
         gap: 20px;
-        padding-top: 100px;
+        padding-top: 79px;
     }
     &__nav-link-modal {
         font-size: 26px;
@@ -1617,6 +1617,66 @@ ul li::before {
         @media (max-width: 610px) {
             width: 100%;
          }
+    }
+    &__modal-contact {
+        text-align: center;
+        padding-top: 40px;
+        padding-bottom: 20px;
+    }
+    &__modal-phone-link {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 150%;
+        color: $light;
+        padding-right: 13px;
+    }
+    &__footer-modal-seporator:not(:last-child)::after {
+            content: "";
+            position: absolute;
+            width: 1px;
+            height: 24px;
+            background-color: $gray;
+            opacity: 0.3;
+    }
+    &__footer-modal-mail {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 150%;
+        color: $light;
+        padding-left: 13px;
+    }
+    &__modal-social-section {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+    }
+    &__modal-social-link {
+        color: $light;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 150%;
+        &::after {
+            content: "";
+            position: absolute;
+            width: 1px;
+            height: 15px;
+            background-color: $gray;
+            opacity: 0.3;
+            margin-left: 10px;
+        }
+    }
+    &__modal-link {
+        display: flex;
+        justify-content: center;
+    }
+    &__background {
+        margin-top: 39px;
+        position: absolute;
+        max-width: 100%;
+        height: 238px;
+        width: 100%;
+        background: rgb(18, 18, 19);
+        opacity: 0.7;
     }
     &__info-and {
         margin-top: 40px;
